# genai-rest-of-us

./: .gitignore  LICENSE  README.md  clip.ipynb  diagrams.py  pyproject.toml  rag.ipynb  requirements.clip.txt  requirements.rag.txt  requirements.txt  stable-diff.ipynb  utils.py
utils/: __init__.py  diagrams.py
