[tool.poetry]
name = "genai-rest-of-us"
version = "0.1.0"
description = "Generative AI for the rest of us - code samples"
authors = ["Janos Tolgyesi <janos.tolgyesi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "1.0.1"

[tool.poetry.group.rag.dependencies]
beautifulsoup4 = "4.12.3"
chromadb = "0.5.0"
langchain = "0.2.1"
langchain-community = "0.2.1"
langchain-openai = "0.1.7"
tiktoken = "0.7.0"

[tool.poetry.group.clip.dependencies]
sentence-transformers = "2.2.2"

[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
